<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dip"
    android:gravity="center_vertical"
    android:background="@color/black"
    android:paddingLeft="8dip"
    android:paddingRight="8dip">
    
    <TextView
        android:id="@+id/backBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/pic"
        android:src="@drawable/titlebar_c_selector"
        android:drawableLeft="@drawable/bar_btn_back_b"
        android:text="@string/back"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="20sp"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">
    	
        <TextView
        	android:id="@+id/displayNameTv"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="#929292"
        	android:textSize="20sp"/>
        
        <TextView
        	android:id="@+id/selectedCountTv"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textColor="#929292"
        	android:textSize="20sp"/>
        
    </LinearLayout>
    
    <TextView
        android:id="@+id/uploadTv"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/titlebar_c_selector"
        android:gravity="center"
        android:text="@string/upload"
        android:textColor="@color/white"
        android:textSize="20sp"/>
    

</RelativeLayout>
