<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/invite_tip_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/layout_padding"
            android:paddingRight="@dimen/layout_padding" >
 
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_40"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/number_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_pginvite_number_1" />

                <TextView
                    android:id="@+id/text_first"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/info_margin_8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/invite_tip_line_1"
                    android:textColor="@color/content_text"
                    android:textSize="@dimen/text_size_13" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/info_margin_12dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/number_sencond"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_pginvite_number_2" />

                <TextView
                    android:id="@+id/text_sencond"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/info_margin_8dp"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="@string/invite_tip_line_2"
                    android:textColor="@color/content_text"
                    android:textSize="@dimen/text_size_13" />
            </LinearLayout>

            <TextView
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/info_divider_line_height"
                android:layout_marginTop="@dimen/padding_40"
                android:background="@color/list_divider_line_color" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/icons_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/invite_tip_content"
            android:layout_marginTop="48dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="36dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/icon_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/invite_wechat_selector"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/text_wechat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/info_margin_4dp"
                    android:text="@string/invite_wechat"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/icon_yixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/invite_yixin_selector"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/text_yixin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/info_margin_4dp"
                    android:text="@string/invite_yixin"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="35dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/icon_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/invite_weibo_selector"
                    android:clickable="true" />

                <TextView
                    android:id="@+id/text_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/info_margin_4dp"
                    android:text="@string/invite_weibo"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_12" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/invite_tip_content"
            android:layout_marginTop="166dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/btn_invite_femal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/info_margin_40dp"
                android:layout_marginBottom="@dimen/info_margin_10dp"
                android:layout_marginLeft="@dimen/layout_padding"
                android:layout_marginRight="@dimen/layout_padding"
                android:layout_marginTop="@dimen/info_margin_10dp"
                android:background="@drawable/btn_purple_selector"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/invite_female"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_17" />

            <TextView
                android:id="@+id/btn_invite_male"
                android:layout_width="match_parent"
                android:layout_height="@dimen/info_margin_40dp"
                android:layout_marginBottom="@dimen/info_margin_10dp"
                android:layout_marginLeft="@dimen/layout_padding"
                android:layout_marginRight="@dimen/layout_padding"
                android:layout_marginTop="@dimen/info_margin_10dp"
                android:background="@drawable/btn_purple_selector"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/invite_male"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_17" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>