<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ptr="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black" >

    <RelativeLayout
        android:id="@+id/top_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/info_margin_48dp" >
	
        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/info_margin_8dp"
	        android:background="@drawable/titlebar_c_selector"
	        android:drawableLeft="@drawable/bar_btn_back_b"
	        android:layout_centerVertical="true"
	        android:drawablePadding="-2dip"
	        android:textColor="@color/white"
	        android:textSize="16sp"
	        android:text="@string/back"
	        android:gravity="left|center_vertical"
	        android:layout_marginRight="5dip"
            android:visibility="visible"/>
        
        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="@dimen/info_margin_8dp"
	        android:background="@drawable/titlebar_c_selector"
	        android:drawableLeft="@drawable/bar_btn_back_b"
	        android:layout_centerVertical="true"
	        android:drawablePadding="-2dip"
	        android:textColor="@color/white"
	        android:textSize="16sp"
	        android:gravity="left|center_vertical"
	        android:layout_marginRight="5dip"
            android:text="@string/cancel"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/middle_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/info_margin_16dp"
            android:text="@string/album_title"
            android:textColor="@color/pri_photo_list_title_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="@dimen/info_margin_8dp"
        	android:background="@drawable/titlebar_c_selector"
        	android:layout_alignParentRight="true"
        	android:textColor="@color/white"
        	android:text="@string/edit"
        	android:layout_centerVertical="true"
        	android:textSize="16sp"
        	android:layout_marginLeft="8dip"
        	android:gravity="center"/>
    </RelativeLayout>
    
    <TextView android:id="@+id/edit_photo_tips"
        android:textSize="14sp"
        android:textColor="#000000"
        android:padding="8dp"
        android:layout_below="@id/top_title"
        android:drawablePadding="6dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/icon_tips_circle_black"
        android:background="@drawable/bg_add_private_photo_tips"/>

    <com.handmark.pulltorefresh.library.PullToRefreshGridView
        android:id="@+id/pull_refresh_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:layout_below="@+id/edit_photo_tips"
        android:layout_centerInParent="true"
        android:gravity="fill"
        android:stretchMode="columnWidth"
        ptr:ptrDrawable="@drawable/loading_48x48_apng" 
        ptr:ptrHeaderTextColor="@color/white"
        />
</RelativeLayout>